# Devops

./: README.md
monitoring/: Dockerfile  prometheus.yml
monitoring/grafana/: docker-compose.yml
proxy/: nginx.conf
server/: db.sqlite3  pyproject.toml
server/config/: settings.py
